Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53556

tst_material fails on numerous locations

XMLWordPrintable

    • 14e08bafc88824f3d16602b04b5e60ae8c4005b0

      /home/qt/work/qt/qtquickcontrols2/tests/auto/material/target_wrapper.sh  ./tst_material -o /home/qt/work/testresults/tests/auto/material044383600,xml -o -,txt
      ********* Start testing of tst_material *********
      Config: Using QtTest library 5.8.0, Qt 5.8.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 4.8.5)
      PASS   : tst_material::Material::initTestCase()
      ...
      FAIL!  : tst_material::Material::test_comboBox() Compared values are not the same
         Actual   (): #ef9a9a
         Expected (): #f44336
         Loc: [/home/qt/work/qt/qtquickcontrols2/tests/auto/material/data/tst_material.qml(424)]
      ...
      FAIL!  : tst_material::Material::test_inheritance(primary) Compared values are not the same
         Actual   (): #3f51b5
         Expected (): #00000004
         Loc: [/home/qt/work/qt/qtquickcontrols2/tests/auto/material/data/tst_material.qml(253)]
      FAIL!  : tst_material::Material::test_inheritance(accent) Compared values are not the same
         Actual   (): #e91e63
         Expected (): #00000001
         Loc: [/home/qt/work/qt/qtquickcontrols2/tests/auto/material/data/tst_material.qml(253)]
      ...
      FAIL!  : tst_material::Material::test_menu() Compared values are not the same
         Actual   (): #ef9a9a
         Expected (): #f44336
         Loc: [/home/qt/work/qt/qtquickcontrols2/tests/auto/material/data/tst_material.qml(399)]
      FAIL!  : tst_material::Material::test_reset() Compared values are not the same
         Actual   (): #b39ddb
         Expected (): #673ab7
         Loc: [/home/qt/work/qt/qtquickcontrols2/tests/auto/material/data/tst_material.qml(197)]
      FAIL!  : tst_material::Material::test_set() Compared values are not the same
         Actual   (): #bcaaa4
         Expected (): #795548
         Loc: [/home/qt/work/qt/qtquickcontrols2/tests/auto/material/data/tst_material.qml(186)]
      ...
      Totals: 64 passed, 6 failed, 0 skipped, 0 blacklisted, 5594ms
      

        For Gerrit Dashboard: QTBUG-53556
        # Subject Branch Project Status CR V

            liaqi Liang Qi
            tosaraja Tony Sarajärvi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes