Material: fix the reset of primary and accent

Also fix a test in dev(see 44ac831c).

Done-with: J-P Nurmi <jpnurmi@qt.io>
Task-number: QTBUG-53556
Change-Id: I0b156727b07ed8c135c4a7bb6bb31fb2b280d4ec
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>